# 2022-softcon-group-17

./: .gitignore  Makefile  README.md  demo.sh  orders  portforward.sh  stressingmeout.sh
api/: .api.py.swp  .build_database.py.swp  .config.py.swp  .meals.py.swp  .models.py.swp  .orders.py.swp  .swagger.yml.swp  Dockerfile  Makefile  README.md  activate  api.py  bistro.db  build_database.py  config.py  meals.py  models.py  orders.py  people.db  people.py  pyproject.toml  requirements.txt  swagger.yml  tls.crt  tls.key
api/kubernetes/: .api-deployment.yaml.swp  .api-service.yaml.swp  .ingress.yaml.swp  .postgres-config.yaml.swp  .postgres-deployment.yaml.swp  .postgres-secret.yaml.swp  .postgres-service.yaml.swp  .postgres-storage.yaml.swp  api-deployment-backup.yaml  api-deployment.yaml  api-service.yaml  ingress.yaml  postgres-storage.yaml
api/kubernetes/helm-chart/: values.yaml
api/kubernetes/helm-chart/templates/api/: api-deployment.yaml  api-hpa.yaml  api-service.yaml
api/kubernetes/helm-chart/templates/postgres-db/: postgres-deployment.yaml
api/src/: api.py  config.py  meals.py  orders.py
api/ssl/: ingress_tls.sh  readme.md  tls.crt  tls.key
api/static/js/: home.js
api/templates/: home.html
kubernetes/: README.md  canary.yaml  known_tokens.csv  stressingmeout.sh
kubernetes/helm-chart/: Chart.yaml  values.yaml
kubernetes/old_deploy/: api-service.yaml
web-app/: Dockerfile  package-lock.json  package.json
web-app/public/: index.html
web-app/src/: App.js  index.css
web-app/src/constants/: index.js
(+11 files in other folders)
